added hero img placeholder, introduction section

--- a/techcrew.html
+++ b/techcrew.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="techcrew_style.css">
+    <link rel="stylesheet" href="./css/techcrew_style.css">
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <section class="hero-image">
+        <h1 class="hero-text">
+            BHS Technical Crew
+        </h1>
+    </section>
+    <section class="intro">
+        <h1 class="title">Who are we?</h1>
+        <p class="intro">The burnside high school student run technical crew.......................................................</p>
+    </section>
 </body>
 </html>
