--- a/techcrew.html
+++ b/techcrew.html
@@ -8,14 +8,23 @@
     <link rel="stylesheet" href="./css/techcrew_style.css">
 </head>
 <body>
-    <section class="hero-image">
-        <h1 class="hero-text">
-            BHS Technical Crew
-        </h1>
-    </section>
+    <div class="grid-container">
+        <div class="header">
+            <h1 class="hero-text">
+                BHS Technical Crew
+            </h1>
+        </div>
+        <div class="item2">Menu</div>
+        <div class="item3">Main</div>  
+        <div class="item4">Right</div>
+        <div class="item5">Footer</div>
+      </div>
+    
+
     <section class="intro">
         <h1 class="title">Who are we?</h1>
-        <p class="intro">The burnside high school student run technical crew.......................................................</p>
+        <p class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna. Nunc viverra imperdiet enim. Fusce est. Vivamus a tellus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin pharetra nonummy pede. Mauris et orci. Aenean nec lorem. In porttitor. Donec laoreet nonummy augue. Suspendisse dui purus, scelerisque at, vulputate vitae, pretium mattis, nunc. Mauris eget neque at sem venenatis eleifend. Ut nonummy.</p>
     </section>
+    
 </body>
 </html>
