blurred image / fixed heading

--- a/techcrew.html
+++ b/techcrew.html
@@ -11,12 +11,13 @@
     <div class="grid-container">
         <div class="header">
             <h1 class="hero-text">
-                BHS Technical Crew <br> <em class="hero-time">Mondays - After School</em>
+                BHS Technical Crew <br> <em class="time">Mondays - After School</em>
             </h1>
         </div>
         <div class="intro">
-            <h1 class="title">Who are we?</h1>
-        <p class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna. Nunc viverra imperdiet enim. Fusce est. Vivamus a tellus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin pharetra nonummy pede. Mauris et orci. Aenean nec lorem. In porttitor. Donec laoreet nonummy augue. Suspendisse dui purus, scelerisque at, vulputate vitae, pretium mattis, nunc. Mauris eget neque at sem venenatis eleifend. Ut nonummy.</p>
+            <h1 class="title">Who Are We?</h1>
+        <p>The Burnside High School Technical Crew is a group of student volunteers who run the tech side of assemblies and other events. We take care of the sound, lighting, and presentations for school and community events, helping make everything run smoothly.
+        </p>
         </div>
         <div class="item3">Main</div>  
         <div class="item4">Right</div>
